Academics Page  Spacing Fixes

--- a/src/sections/Academics/academics.scss
+++ b/src/sections/Academics/academics.scss
@@ -62,9 +62,10 @@
       @media #{$xsm} {
         text-align: center;
       }
-
-      p {
-        margin: 0;
+      h2 {
+        font-size: 25px;
+        font-weight: 500;
+        margin-bottom: 0;
       }
     }
 
@@ -84,6 +85,8 @@
         background: #1A2C52;
         border: none;
         color: #ffffff;
+        font-size: 21px;
+        font-weight: 500;
         padding: 0.3rem 2.5rem;
         border-radius: 60px;
         @media #{$sm} {
@@ -125,10 +128,11 @@
   }
 
   .ac-bg {
+    margin-top: 3rem;
     display: flex;
     width: 100%;
     justify-content: center;
-    background-image: url("../../assets/images/academics/BG.png");
+    background-image: url("../../assets/images/agsbackgrounds/backgroundCurve.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -163,10 +167,10 @@
         width: 60%;
       }
       @media #{$xl}{
-        margin-top: 6rem;
+        margin-top: 1rem;
       }
       @media #{$lg}{
-        margin-top: 6rem;
+        margin-top: 2rem;
       }
       @media #{$sm,$md}{
         margin-top: 6rem;
